and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

June  24, 2014 - G.Folger  (geomnav-V09-06-23)
-------------------------
- G4MultiNavigator: set 'fIdNavLimiting' index to navigator limiting the step,
  if only one navigator limited the step. Fixes crash in RE05 on Windows.

May 27, 2014 - J.Apostolakis  (geomnav-V09-06-22)
----------------------------
- G4Navigator: corrected saving/restoring of 'navigator state':
  - Added bool sWasLimitedByGeometry to G4SaveNavigatorState struct
     ( fixes side effect of call to ComputeSafety. )
  - Corrected RestoreState() to reset the Safety Origin and Value
  - ComputeSafety: If at endpoint of step, answer safety=0.0 quickly.
       Do not save/restore state. 

April 10, 2014 - G.Cosmo  (geomnav-V09-06-21)
------------------------
- Get rid of deprecated 'register' storage class specifier in source files.

March 14, 2014 - J.Apostolakis
------------------------------
- G4PathFinder: Added method for end of track - needed to signal
   G4 Transportation Manager to use 'ordinary' Navigator.
- Revised G4Navigator::SetupHierarchy, to reduce extra cost due to
   handling the case of Nested Parameterisation.
- PropagatorInField: When setting up a new Intersection Locator 
   pass pointer to current Navigator.

December 11th, 2013 - G.Cosmo  (geomnav-V09-06-20)
-----------------------------
- Fixed implementation of G4TransportationManager::SetNavigatorForTracking()
  to initialise active navigator and propagator-in-field with the new
  provided instance. Addressing problem report #1537.
- Minor code cleanup in G4GlobalMagFieldMessenger.

November 22nd, 2013 - I.Hrivnacova  (geomnav-V09-06-19)
----------------------------------